# MindSync

./: README.md  package-lock.json  package.json
.husky/: pre-commit
backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: analytics.py  auth.py  chatbot.py  journals.py
backend/app/core/: config.py  connection.py  dependencies.py  exceptions.py  security.py
backend/app/db/schemas/: journal.py  supabase.py  user.py
backend/app/models/: ai.py  auth.py  journal.py  tags.py  user.py
backend/app/services/: auth.py  google_oauth.py
backend/app/utils/: auth.py  chatbot_utils.py  email.py  otp_utils.py  seed.py  utils.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
frontend/src/app/: index.tsx  provider.tsx  router.tsx
frontend/src/app/routes/: landing.tsx  not-found.tsx
frontend/src/app/routes/app/: root.tsx
frontend/src/app/routes/auth/: login.tsx  signup.tsx
frontend/src/components/: app-sidebar.tsx  nav-main.tsx  nav-secondary.tsx  nav-user.tsx  site-header.tsx
frontend/src/components/errors/: main.tsx
frontend/src/components/journals/: book-journal-card.tsx  journal-card.tsx  journal-detail.tsx  journal-entries.tsx
frontend/src/components/layouts/: auth-layout.tsx  dashboard-layout.tsx
frontend/src/components/minimal-tiptap/: minimal-tiptap.tsx
frontend/src/components/minimal-tiptap/components/: shortcut-key.tsx  spinner.tsx  toolbar-section.tsx
frontend/src/components/minimal-tiptap/hooks/: use-minimal-tiptap.ts
frontend/src/components/minimal-tiptap/styles/: index.css
frontend/src/components/seo/: head.tsx
frontend/src/components/ui/: button.tsx  calender-component.tsx  journal-card.tsx  mood-charts.tsx  pie-chart.tsx  sidebar.tsx  spinner.tsx  tag-usage-charts.tsx
frontend/src/components/ui/notifications/: notifications.tsx
frontend/src/components/ui/spinner/: spinner.tsx
frontend/src/config/: api-paths.ts  env.ts  paths.ts
frontend/src/features/chatbot/: chat-container.tsx  chat-input.tsx  loader.tsx  markdown.tsx  prompt-input.tsx  response-stream.tsx  scroll-button.tsx
frontend/src/features/journals/: types.ts
frontend/src/hooks/: use-swipeable.ts  useAvatar.ts
frontend/src/lib/: api-client.tsx  auth.tsx  react-query.ts  sse-stream.ts
frontend/src/pages/Dashboard/: Chatbot.tsx  index.tsx  sidebardata.ts
frontend/src/pages/Landing/: Footer.tsx  Section1.tsx  Section2.tsx  Section3.tsx  index.tsx
frontend/src/pages/NotFound/: NotFound.tsx
frontend/src/pages/SEBIRegulationsPage/: index.tsx
frontend/src/pages/Taxation/: index.tsx
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/routes/(app)/: app.calendar.tsx  app.chat.tsx  app.create.tsx  app.dashboard.tsx  app.insights.tsx  app.journals.tsx  app.moods.tsx  app.settings.tsx  app.tsx
frontend/src/routes/_auth/: __root.tsx  route.tsx  signin.tsx  signup.tsx
frontend/src/routes/app/: dashboard.tsx
frontend/src/stores/: authStore.ts  chatStore.ts  editorStore.ts  registerStore.ts  useStepStore.ts
frontend/src/types/: api.ts  createJournal.ts
(+9 files in other folders)
