[project]
name = "nnbackend"
version = "0.1.0"
description = ""
authors = [
    {name = "Vedant Panchal",email = "VEDANTPANCHAL.ict22@adaniuni.ac.in"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-jose (>=3.3.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "supabase (>=2.13.0,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "cryptography (>=44.0.0,<45.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
